antlr/ChronicleLogstashParser.py
# Generated from /Users/caleb.bryant/Library/CloudStorage/OneDrive-Cyderes/TelEng/github/chronicle-parser-language-server/antlr/ChronicleLogstashParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChronicleLogstashParser ( Parser ):

    grammarFileName = "ChronicleLogstashParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'if'", "'else if'", 
                     "'else'", "'for'", "'in'", "'not'", "<INVALID>", "'}'", 
                     "'['", "']'", "'('", "')'", "<INVALID>", "','", "'!'", 
                     "<INVALID>", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=~'", "'!~'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "IF", "ELSEIF", "ELSE", 
                      "FOR", "IN", "NOT", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "LPAREN", "RPAREN", "KVSEPARATOR", "COMMA", 
                      "BOOLNOT", "MATHOP", "EQUAL", "NOTEQUAL", "LESSTHAN", 
                      "GREATERTHAN", "LTEQUAL", "GTEQUAL", "MATCH", "NOTMATCH", 
                      "AND", "OR", "BOOLEAN", "STRING", "REGEX", "IFSTATEMENTID", 
                      "ID", "NUMBER", "FORWS", "FORCOMMA", "FORIN", "FORID", 
                      "FOROPENER" ]

    RULE_filterblock = 0
    RULE_conditionalblock = 1
    RULE_statement = 2
    RULE_expression = 3
    RULE_unary_expression = 4
    RULE_binary_expression = 5
    RULE_expression_val = 6
    RULE_math_statement = 7
    RULE_math_expression = 8
    RULE_boolean_op = 9
    RULE_boolean_eval = 10
    RULE_plugin = 11
    RULE_keyvalue = 12
    RULE_kv_lvalue = 13
    RULE_kv_rvalue = 14
    RULE_hash = 15
    RULE_list = 16
    RULE_if_list = 17
    RULE_list_value = 18

    ruleNames =  [ "filterblock", "conditionalblock", "statement", "expression", 
                   "unary_expression", "binary_expression", "expression_val", 
                   "math_statement", "math_expression", "boolean_op", "boolean_eval", 
                   "plugin", "keyvalue", "kv_lvalue", "kv_rvalue", "hash", 
                   "list", "if_list", "list_value" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOR=6
    IN=7
    NOT=8
    LBRACE=9
    RBRACE=10
    LBRACKET=11
    RBRACKET=12
    LPAREN=13
    RPAREN=14
    KVSEPARATOR=15
    COMMA=16
    BOOLNOT=17
    MATHOP=18
    EQUAL=19
    NOTEQUAL=20
    LESSTHAN=21
    GREATERTHAN=22
    LTEQUAL=23
    GTEQUAL=24
    MATCH=25
    NOTMATCH=26
    AND=27
    OR=28
    BOOLEAN=29
    STRING=30
    REGEX=31
    IFSTATEMENTID=32
    ID=33
    NUMBER=34
    FORWS=35
    FORCOMMA=36
    FORIN=37
    FORID=38
    FOROPENER=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FilterblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ChronicleLogstashParser.ID, 0)

        def LBRACE(self):
            return self.getToken(ChronicleLogstashParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ChronicleLogstashParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(ChronicleLogstashParser.EOF, 0)

        def plugin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.PluginContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.PluginContext,i)


        def conditionalblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.ConditionalblockContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.ConditionalblockContext,i)


        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_filterblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterblock" ):
                listener.enterFilterblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterblock" ):
                listener.exitFilterblock(self)




    def filterblock(self):

        localctx = ChronicleLogstashParser.FilterblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_filterblock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(ChronicleLogstashParser.ID)
            self.state = 39
            self.match(ChronicleLogstashParser.LBRACE)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589934712) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [33]:
                    self.state = 40
                    self.plugin()
                    pass
                elif token in [3, 4, 5, 6]:
                    self.state = 41
                    self.conditionalblock()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(ChronicleLogstashParser.RBRACE)
            self.state = 48
            self.match(ChronicleLogstashParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.StatementContext,0)


        def LBRACE(self):
            return self.getToken(ChronicleLogstashParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ChronicleLogstashParser.RBRACE, 0)

        def IF(self):
            return self.getToken(ChronicleLogstashParser.IF, 0)

        def ELSEIF(self):
            return self.getToken(ChronicleLogstashParser.ELSEIF, 0)

        def plugin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.PluginContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.PluginContext,i)


        def conditionalblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.ConditionalblockContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.ConditionalblockContext,i)


        def ELSE(self):
            return self.getToken(ChronicleLogstashParser.ELSE, 0)

        def FOR(self):
            return self.getToken(ChronicleLogstashParser.FOR, 0)

        def FORID(self, i:int=None):
            if i is None:
                return self.getTokens(ChronicleLogstashParser.FORID)
            else:
                return self.getToken(ChronicleLogstashParser.FORID, i)

        def FORIN(self):
            return self.getToken(ChronicleLogstashParser.FORIN, 0)

        def FOROPENER(self):
            return self.getToken(ChronicleLogstashParser.FOROPENER, 0)

        def FORCOMMA(self):
            return self.getToken(ChronicleLogstashParser.FORCOMMA, 0)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_conditionalblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalblock" ):
                listener.enterConditionalblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalblock" ):
                listener.exitConditionalblock(self)




    def conditionalblock(self):

        localctx = ChronicleLogstashParser.ConditionalblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_conditionalblock)
        self._la = 0 # Token type
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 51
                self.statement(0)
                self.state = 52
                self.match(ChronicleLogstashParser.LBRACE)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589934712) != 0):
                    self.state = 55
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [33]:
                        self.state = 53
                        self.plugin()
                        pass
                    elif token in [3, 4, 5, 6]:
                        self.state = 54
                        self.conditionalblock()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(ChronicleLogstashParser.RBRACE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(ChronicleLogstashParser.ELSE)
                self.state = 63
                self.match(ChronicleLogstashParser.LBRACE)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589934712) != 0):
                    self.state = 66
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [33]:
                        self.state = 64
                        self.plugin()
                        pass
                    elif token in [3, 4, 5, 6]:
                        self.state = 65
                        self.conditionalblock()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(ChronicleLogstashParser.RBRACE)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.match(ChronicleLogstashParser.FOR)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 73
                    self.match(ChronicleLogstashParser.FORID)
                    self.state = 74
                    self.match(ChronicleLogstashParser.FORCOMMA)


                self.state = 77
                self.match(ChronicleLogstashParser.FORID)
                self.state = 78
                self.match(ChronicleLogstashParser.FORIN)
                self.state = 79
                self.match(ChronicleLogstashParser.FORID)
                self.state = 80
                self.match(ChronicleLogstashParser.FOROPENER)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589934712) != 0):
                    self.state = 83
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [33]:
                        self.state = 81
                        self.plugin()
                        pass
                    elif token in [3, 4, 5, 6]:
                        self.state = 82
                        self.conditionalblock()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(ChronicleLogstashParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ChronicleLogstashParser.LPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.StatementContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.StatementContext,i)


        def RPAREN(self):
            return self.getToken(ChronicleLogstashParser.RPAREN, 0)

        def LBRACKET(self):
            return self.getToken(ChronicleLogstashParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(ChronicleLogstashParser.RBRACKET, 0)

        def BOOLNOT(self):
            return self.getToken(ChronicleLogstashParser.BOOLNOT, 0)

        def expression(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.ExpressionContext,0)


        def boolean_op(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Boolean_opContext,0)


        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)



    def statement(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ChronicleLogstashParser.StatementContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_statement, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 92
                self.match(ChronicleLogstashParser.LPAREN)
                self.state = 93
                self.statement(0)
                self.state = 94
                self.match(ChronicleLogstashParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 96
                self.match(ChronicleLogstashParser.LBRACKET)
                self.state = 97
                self.statement(0)
                self.state = 98
                self.match(ChronicleLogstashParser.RBRACKET)
                pass

            elif la_ == 3:
                self.state = 100
                self.match(ChronicleLogstashParser.BOOLNOT)
                self.state = 101
                self.statement(2)
                pass

            elif la_ == 4:
                self.state = 102
                self.expression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ChronicleLogstashParser.StatementContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_statement)
                    self.state = 105
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 106
                    self.boolean_op()
                    self.state = 107
                    self.statement(4) 
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary_expression(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Binary_expressionContext,0)


        def unary_expression(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Unary_expressionContext,0)


        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = ChronicleLogstashParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.binary_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.unary_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IFSTATEMENTID(self):
            return self.getToken(ChronicleLogstashParser.IFSTATEMENTID, 0)

        def BOOLEAN(self):
            return self.getToken(ChronicleLogstashParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_unary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary_expression" ):
                listener.enterUnary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary_expression" ):
                listener.exitUnary_expression(self)




    def unary_expression(self):

        localctx = ChronicleLogstashParser.Unary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_unary_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not(_la==29 or _la==32):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_val(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.Expression_valContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.Expression_valContext,i)


        def boolean_eval(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Boolean_evalContext,0)


        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_binary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary_expression" ):
                listener.enterBinary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary_expression" ):
                listener.exitBinary_expression(self)




    def binary_expression(self):

        localctx = ChronicleLogstashParser.Binary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_binary_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.expression_val()
            self.state = 121
            self.boolean_eval()
            self.state = 122
            self.expression_val()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_valContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def math_statement(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Math_statementContext,0)


        def NUMBER(self):
            return self.getToken(ChronicleLogstashParser.NUMBER, 0)

        def if_list(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.If_listContext,0)


        def IFSTATEMENTID(self):
            return self.getToken(ChronicleLogstashParser.IFSTATEMENTID, 0)

        def STRING(self):
            return self.getToken(ChronicleLogstashParser.STRING, 0)

        def REGEX(self):
            return self.getToken(ChronicleLogstashParser.REGEX, 0)

        def BOOLEAN(self):
            return self.getToken(ChronicleLogstashParser.BOOLEAN, 0)

        def ID(self):
            return self.getToken(ChronicleLogstashParser.ID, 0)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_expression_val

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_val" ):
                listener.enterExpression_val(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_val" ):
                listener.exitExpression_val(self)




    def expression_val(self):

        localctx = ChronicleLogstashParser.Expression_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression_val)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.math_statement(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(ChronicleLogstashParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.if_list()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.match(ChronicleLogstashParser.IFSTATEMENTID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.match(ChronicleLogstashParser.STRING)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.match(ChronicleLogstashParser.REGEX)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.match(ChronicleLogstashParser.BOOLEAN)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 131
                self.match(ChronicleLogstashParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Math_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ChronicleLogstashParser.LPAREN, 0)

        def math_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChronicleLogstashParser.Math_statementContext)
            else:
                return self.getTypedRuleContext(ChronicleLogstashParser.Math_statementContext,i)


        def RPAREN(self):
            return self.getToken(ChronicleLogstashParser.RPAREN, 0)

        def math_expression(self):
            return self.getTypedRuleContext(ChronicleLogstashParser.Math_expressionContext,0)


        def MATHOP(self):
            return self.getToken(ChronicleLogstashParser.MATHOP, 0)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_math_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_statement" ):
                listener.enterMath_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_statement" ):
                listener.exitMath_statement(self)



    def math_statement(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ChronicleLogstashParser.Math_statementContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_math_statement, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 135
                self.match(ChronicleLogstashParser.LPAREN)
                self.state = 136
                self.math_statement(0)
                self.state = 137
                self.match(ChronicleLogstashParser.RPAREN)
                pass
            elif token in [32, 34]:
                self.state = 139
                self.math_expression()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 147
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ChronicleLogstashParser.Math_statementContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_math_statement)
                    self.state = 142
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 143
                    self.match(ChronicleLogstashParser.MATHOP)
                    self.state = 144
                    self.math_statement(3) 
                self.state = 149
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Math_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATHOP(self):
            return self.getToken(ChronicleLogstashParser.MATHOP, 0)

        def IFSTATEMENTID(self, i:int=None):
            if i is None:
                return self.getTokens(ChronicleLogstashParser.IFSTATEMENTID)
            else:
                return self.getToken(ChronicleLogstashParser.IFSTATEMENTID, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(ChronicleLogstashParser.NUMBER)
            else:
                return self.getToken(ChronicleLogstashParser.NUMBER, i)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_math_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_expression" ):
                listener.enterMath_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_expression" ):
                listener.exitMath_expression(self)




    def math_expression(self):

        localctx = ChronicleLogstashParser.Math_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_math_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==32 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 151
            self.match(ChronicleLogstashParser.MATHOP)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==32 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(ChronicleLogstashParser.AND, 0)

        def OR(self):
            return self.getToken(ChronicleLogstashParser.OR, 0)

        def getRuleIndex(self):
            return ChronicleLogstashParser.RULE_boolean_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_op" ):
                listener.enterBoolean_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_op" ):
                listener.exitBoolean_op(self)




    def boolean_op(self):

        localctx = ChronicleLogstashParser.Boolean_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolean_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==27 or _la==28):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_evalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(ChronicleLogstashParser.EQUAL, 0)

        def NOTEQUAL(self):
            return self.getToken(ChronicleLogstashParser.NOTEQUAL, 0)

        def LESSTHAN(self):
            return self.getToken(ChronicleLogstashParser.LESSTHAN, 0)

        def GREATERTHAN(self):
            return self.getToken(ChronicleLogstashParser.GREATERTHAN, 0)

        def LTEQUAL(self):
            return self.getToken(ChronicleLogstashParser.LTEQUAL, 0)

        def GTEQUAL(self):
            return self.getToken(ChronicleLogstashParser.GTEQUAL, 0)

        def MATCH(self):
            return self.getToken(ChronicleLogstashParser.MATCH, 0)

        def NOTMATCH(self):
            return self.getToken(ChronicleLogstashParser.NOTMATCH, 0)

        def IN(self):
            return self.getToken(ChronicleLogstashParser.IN, 0)
